# msdf

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
atlas-gen/: CMakeLists.txt
atlas-gen/src/: main.cpp
cmake/: Cache.cmake  CompilerWarnings.cmake  StaticAnalyzers.cmake
lib/: CMakeLists.txt
lib/include/: msdfgen.h  msdfgen.hpp
lib/include/atlas/: AtlasGenerator.h  AtlasGenerator.hpp  AtlasStorage.h  AtlasStorage.hpp  BitmapAtlasStorage.h  BitmapAtlasStorage.hpp  Charset.h  Charset.hpp  DynamicAtlas.h  DynamicAtlas.hpp  FontGeometry.h  FontGeometry.hpp  GlyphBox.h  GlyphBox.hpp  GlyphGeometry.h  GlyphGeometry.hpp  GridAtlasPacker.h  GridAtlasPacker.hpp  ImmediateAtlasGenerator.h  ImmediateAtlasGenerator.hpp  Rectangle.h  RectanglePacker.h  RectanglePacker.hpp  Remap.hpp  TightAtlasPacker.h  TightAtlasPacker.hpp  Workload.h  bitmap-blit.h  bitmap-blit.hpp  csv-export.h  csv-export.hpp  glyph-generators.h  glyph-generators.hpp  image-encode.h  image-encode.hpp  image-save.h  image-save.hpp  json-export.h  json-export.hpp  rectangle-packing.h  (+7 more)
lib/include/core/: Bitmap.h  Bitmap.hpp  BitmapRef.hpp  Contour.h  Contour.hpp  EdgeColor.hpp  EdgeHolder.h  EdgeHolder.hpp  MSDFErrorCorrection.h  MSDFErrorCorrection.hpp  Projection.h  Scanline.h  Shape.h  Shape.hpp  ShapeDistanceFinder.h  ShapeDistanceFinder.hpp  SignedDistance.hpp  Vector2.hpp  arithmetics.hpp  base.h  bitmap-interpolation.hpp  contour-combiners.h  contour-combiners.hpp  edge-coloring.h  edge-coloring.hpp  edge-segments.h  edge-segments.hpp  edge-selectors.h  edge-selectors.hpp  equation-solver.h  generator-config.h  generator-config.hpp  msdf-error-correction.h  msdf-error-correction.hpp  pixel-conversion.hpp  rasterization.h  rasterization.hpp  render-sdf.hpp  save-bmp.h  save-bmp.hpp  (+5 more)
lib/include/ext/: import-font.h  import-font.hpp  import-svg.h  import-svg.hpp  save-png.h  save-png.hpp
lib/src/: msdfgen.cpp
lib/src/atlas/: Charset.cpp  FontGeometry.cpp  GlyphGeometry.cpp  GridAtlasPacker.cpp  RectanglePacker.cpp  TightAtlasPacker.cpp  Workload.cpp  bitmap-blit.cpp  charset-parser.cpp  csv-export.cpp  glyph-generators.cpp  image-encode.cpp  json-export.cpp  shadron-preview-generator.cpp  size-selectors.cpp  utf8.cpp
lib/src/core/: Contour.cpp  EdgeHolder.cpp  MSDFErrorCorrection.cpp  Projection.cpp  Scanline.cpp  Shape.cpp  contour-combiners.cpp  edge-coloring.cpp  edge-segments.cpp  edge-selectors.cpp  equation-solver.cpp  msdf-error-correction.cpp  rasterization.cpp  render-sdf.cpp  save-bmp.cpp  save-tiff.cpp  sdf-error-estimation.cpp  shape-description.cpp
lib/src/ext/: import-font.cpp  import-svg.cpp  save-png.cpp
